zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__suppress_floating_pane_embed_it_and_close_it.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
assertion_line: 1418
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────┐┌ Pane #2 ─────────────────────────────────────────────────┐
01 (C): │                                                           ││                                                          │
02 (C): │                                                           ││                                                          │
03 (C): │                                                           ││                                                          │
04 (C): │                                                           ││I am the original pane                                    │
05 (C): │                                                           ││                                                          │
06 (C): │                                                           ││                                                          │
07 (C): │                                                           ││                                                          │
08 (C): │                                                           ││                                                          │
09 (C): │                                                           ││                                                          │
10 (C): │                                                           ││                                                          │
11 (C): │                                                           ││                                                          │
12 (C): │                                                           ││                                                          │
13 (C): │                                                           ││                                                          │
14 (C): │                                                           ││                                                          │
15 (C): │                                                           ││                                                          │
16 (C): │                                                           ││                                                          │
17 (C): │                                                           ││                                                          │
18 (C): │                                                           ││                                                          │
19 (C): └───────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘

